--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "name": "Python Debugger: Download EGKB",
             "type": "debugpy",
@@ -16,6 +17,19 @@
             "cwd": "${workspaceFolder}/python",
             "python": "${workspaceFolder}/python/venv/bin/python",
             "args": ["download", "EGKB"]
+        },
+        {
+            "name": "Python Debugger: France eAIP LFAT",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "newinfo.py",
+            "console": "integratedTerminal",
+            "env": {
+                "PYTHONPATH": "${workspaceFolder}/euro_aip"
+            },
+            "cwd": "${workspaceFolder}/python",
+            "python": "${workspaceFolder}/python/venv/bin/python",
+            "args": ["--root-dir", "cache/eaip_17_apr_2025", "france_eaip", "LFAT"]
         }
     ]
 }
