--- a/euro_aip/.vscode/launch.json
+++ b/euro_aip/.vscode/launch.json
@@ -29,7 +29,7 @@
             },
             "cwd": "${workspaceFolder}/example",
             "python": "${workspaceFolder}/venv/bin/python",
-            "args": ["--root-dir", "cache/eaip_17_apr_2025", "-f", "france_eaip", "LFQA"]
+            "args": ["--root-dir", "cache/eaip_17_apr_2025",  "france_eaip"]
         },
         {
             "name": "Python Debugger: World Airports",
