--- a/euro_aip/.vscode/launch.json
+++ b/euro_aip/.vscode/launch.json
@@ -2,6 +2,32 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Python Debugger: Python File",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${file}"
+        },
+        {
+            "name": "Python Debugger: Python File with Arguments",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${file}",
+            "args": "${input:FileArgs}"
+        },
+        {
+            "name": "Python Debugger: Export test",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "aipexport.py",
+            "console": "integratedTerminal",
+            "env": {
+                "PYTHONPATH": "${workspaceFolder}/example"
+            },
+            "cwd": "${workspaceFolder}/example",
+            "python": "${workspaceFolder}/venv/bin/python",
+            "args": "--france-eaip cache/eaip_12_jun_2025 --uk-eaip cache/AIRAC_06_25 LFAT EGKB --sqlite t.db"
+        },
+        {
             "name": "Python Debugger: Autorouter EGKB",
             "type": "debugpy",
             "request": "launch",
@@ -117,32 +143,6 @@
             "python": "${workspaceFolder}/venv/bin/python",
             "args": "${input:aipArgs}"
         },
-        {
-            "name": "Python Debugger: Interactive AIP Change",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "aipchange.py",
-            "console": "integratedTerminal",
-            "env": {
-                "PYTHONPATH": "${workspaceFolder}"
-            },
-            "cwd": "${workspaceFolder}/example",
-            "python": "${workspaceFolder}/venv/bin/python",
-            "args": "${input:aipChangeArgs}"
-        },
-        {
-            "name": "Python Debugger: Python File",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "${file}"
-        },
-        {
-            "name": "Python Debugger: Python File with Arguments",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "${file}",
-            "args": "${input:FileArgs}"
-        }
     ],
     "inputs": [
         {
