--- a/euro_aip/.vscode/launch.json
+++ b/euro_aip/.vscode/launch.json
@@ -8,9 +8,10 @@
             "program": "${file}"
         },
         {
-            "name": "Python Debugger: Python File with Arguments",
+            "name": "Python Debugger: Example Python File with Arguments",
             "type": "debugpy",
             "request": "launch",
+            "cwd": "${workspaceFolder}/example",
             "program": "${file}",
             "args": "${input:FileArgs}"
         },
@@ -25,7 +26,7 @@
             },
             "cwd": "${workspaceFolder}/example",
             "python": "${workspaceFolder}/venv/bin/python",
-            "args": "--worldairports --worldairports-filter default --france-eaip cache/eaip_12_jun_2025 --uk-eaip cache/AIRAC_06_25 LFAT EGKB --database-storage airports_new.db"
+            "args": "--worldairports --worldairports-filter required --france-eaip cache/eaip_12_jun_2025 --uk-eaip cache/AIRAC_06_25 LFAT EGKB --database-storage airports_new.db"
         },
         {
             "name": "Python Debugger: Autorouter EGKB",
