--- a/euro_aip/.vscode/launch.json
+++ b/euro_aip/.vscode/launch.json
@@ -16,7 +16,7 @@
             "args": "${input:FileArgs}"
         },
         {
-            "name": "Python Debugger: Export test",
+            "name": "Python Debugger: Rebuild france and uk",
             "type": "debugpy",
             "request": "launch",
             "program": "aipexport.py",
@@ -26,7 +26,7 @@
             },
             "cwd": "${workspaceFolder}/example",
             "python": "${workspaceFolder}/venv/bin/python",
-            "args": "--worldairports --worldairports-filter required --france-eaip cache/eaip_12_jun_2025 --uk-eaip cache/AIRAC_06_25 LFAT EGKB --database-storage airports_new.db"
+            "args": "--worldairports --worldairports-filter all --france-eaip cache/eaip_12_jun_2025 --uk-eaip cache/AIRAC_06_25 --database-storage airports.db EGMD LFQA --force-refresh"
         },
         {
             "name": "Python Debugger: Autorouter EGKB",
