--- a/euro_aip/pyproject.toml
+++ b/euro_aip/pyproject.toml
@@ -27,6 +27,10 @@ dependencies = [
     "camelot-py>=1.0.0",
     "sqlalchemy>=1.4.0",
     "python-dateutil>=2.8.1",
+    "simplekml>=1.3.0",
+    "openpyxl>=3.0.0",
+    "beautifulsoup4>=4.9.0",
+    "pdfplumber>=0.7.0",
 ]
 
 [project.optional-dependencies]
