--- a/euro_aip/.vscode/launch.json
+++ b/euro_aip/.vscode/launch.json
@@ -16,7 +16,7 @@
             "args": "${input:FileArgs}"
         },
         {
-            "name": "Python Debugger: Rebuild france and uk",
+            "name": "Python Debugger: Rebuild france web",
             "type": "debugpy",
             "request": "launch",
             "program": "aipexport.py",
@@ -26,7 +26,7 @@
             },
             "cwd": "${workspaceFolder}/example",
             "python": "${workspaceFolder}/venv/bin/python",
-            "args": "--worldairports --worldairports-filter all --france-eaip cache/eaip_12_jun_2025 --uk-eaip cache/AIRAC_06_25 --database-storage airports.db "
+            "args": "--worldairports --france-web --france-web-date 2025-10-02 --database-storage airports2.db LFAT LFQA LFMD"
         },
         {
             "name": "Python Debugger: Rebuild border crossing",
