--- a/euro_aip/.vscode/launch.json
+++ b/euro_aip/.vscode/launch.json
@@ -26,7 +26,7 @@
             },
             "cwd": "${workspaceFolder}/example",
             "python": "${workspaceFolder}/venv/bin/python",
-            "args": "--worldairports --france-web --france-web-date 2025-10-02 --database-storage airports2.db LFAT LFQA LFMD"
+            "args": "--worldairports --uk-web --airac-date 2025-10-02 --database-storage airports2.db "
         },
         {
             "name": "Python Debugger: Rebuild border crossing",
