--- a/euro_aip/pyproject.toml
+++ b/euro_aip/pyproject.toml
@@ -20,17 +20,16 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
 ]
-requires-python = ">=3.8"
+requires-python = ">=3.13"
 dependencies = [
     "requests>=2.25.1",
     "pandas>=1.2.0",
-    "camelot-py>=1.0.0",
     "sqlalchemy>=1.4.0",
-    "python-dateutil>=2.8.1",
     "simplekml>=1.3.0",
     "openpyxl>=3.0.0",
     "beautifulsoup4>=4.9.0",
-    "pdfplumber>=0.7.0",
+    "tabulate>=0.9.0",
+    "numpy>=2.2.5",
 ]
 
 [project.optional-dependencies]
@@ -41,6 +40,12 @@ dev = [
     "flake8>=3.9.0",
 ]
 
+pdf = [
+    "camelot-py>=1.0.0",
+    "pdfplumber>=0.7.0",
+    "pdfminer>=20191125",
+]
+
 [tool.setuptools]
 packages = ["euro_aip"]
 
@@ -49,7 +54,7 @@ line-length = 88
 target-version = ["py38"]
 
 [tool.mypy]
-python_version = "3.8"
+python_version = "3.13"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
