--- a/euro_aip/pyproject.toml
+++ b/euro_aip/pyproject.toml
@@ -30,6 +30,12 @@ dependencies = [
     "beautifulsoup4>=4.9.0",
     "tabulate>=0.9.0",
     "numpy>=2.2.5",
+    "fastapi>=0.116.1",
+    "fastmcp>=2.11.3",
+    "pydantic>=2.11.7",
+    "langchain>=1.0.3",
+    "langchain_mcp_adapters>=0.1.12",
+    "uvicorn>=0.35.0",
 ]
 
 [project.optional-dependencies]
@@ -63,4 +69,8 @@ disallow_incomplete_defs = true
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = ["test_*.py"]
-addopts = "-v --tb=short" 
+addopts = "-v --tb=short"
+
+[tool.deptry.per_rule_ignores]
+DEP001 = ["security_config","api","chat"]
+DEP002 = ["pytest","black","mypy","flake8"]
