--- a/euro_aip/requirements.txt
+++ b/euro_aip/requirements.txt
@@ -1,8 +1,138 @@
-pandas
-requests
-pathlib
-pytest 
-simplekml
-beautifulsoup4
-openpyxl>=3.0.0
-tabulate
+aiofiles>=24.1.0
+aiohappyeyeballs>=2.6.1
+aiohttp>=3.13.2
+aiosignal>=1.4.0
+annotated-types>=0.7.0
+anyio>=4.9.0
+attrs>=25.3.0
+Authlib>=1.6.1
+beautifulsoup4>=4.13.4
+bs4>=0.0.2
+camelot-py>=1.0.0
+certifi>=2025.4.26
+cffi>=1.17.1
+chardet>=5.2.0
+charset-normalizer>=3.4.1
+click>=8.1.8
+cryptography>=44.0.2
+cyclopts>=3.22.5
+dataclasses-json>=0.6.7
+deptry>=0.23.1
+distro>=1.9.0
+dnspython>=2.7.0
+docstring_parser>=0.17.0
+docutils>=0.22
+email_validator>=2.2.0
+et_xmlfile>=2.0.0
+exceptiongroup>=1.3.0
+fastapi>=0.116.1
+fastmcp>=2.11.3
+frozenlist>=1.8.0
+h11>=0.16.0
+httpcore>=1.0.9
+httptools>=0.6.4
+httpx>=0.28.1
+httpx-sse>=0.4.1
+idna>=3.10
+iniconfig>=2.1.0
+isodate>=0.7.2
+Jinja2>=3.1.6
+jiter>=0.11.1
+jsonpatch>=1.33
+jsonpointer>=3.0.0
+jsonschema>=4.25.1
+jsonschema-path>=0.3.4
+jsonschema-specifications>=2025.4.1
+langchain>=1.0.3
+langchain-classic>=1.0.0
+langchain-community>=0.4.1
+langchain-core>=1.0.3
+langchain-mcp-adapters>=0.1.12
+langchain-openai>=1.0.2
+langchain-text-splitters>=1.0.0
+langgraph>=1.0.2
+langgraph-checkpoint>=3.0.1
+langgraph-prebuilt>=1.0.2
+langgraph-sdk>=0.2.9
+langsmith>=0.4.41
+lazy-object-proxy>=1.12.0
+markdown-it-py>=4.0.0
+MarkupSafe>=3.0.2
+marshmallow>=3.26.1
+mcp>=1.13.1
+mdurl>=0.1.2
+more-itertools>=10.7.0
+multidict>=6.7.0
+mypy_extensions>=1.1.0
+numpy>=2.2.5
+openai>=2.7.1
+openapi-core>=0.19.5
+openapi-pydantic>=0.5.1
+openapi-schema-validator>=0.6.3
+openapi-spec-validator>=0.7.2
+opencv-python-headless>=4.11.0.86
+openpyxl>=3.1.5
+orjson>=3.11.4
+ormsgpack>=1.12.0
+packaging>=25.0
+pandas>=2.2.3
+parse>=1.20.2
+pathable>=0.4.4
+pathlib>=1.0.1
+pdfminer>=20191125
+pdfminer.six>=20250327
+pdfplumber>=0.11.6
+pillow>=11.2.1
+pluggy>=1.5.0
+propcache>=0.4.1
+pycparser>=2.22
+pycryptodome>=3.23.0
+pydantic>=2.11.7
+pydantic-settings>=2.10.1
+pydantic_core>=2.33.2
+Pygments>=2.19.2
+pypdf>=5.4.0
+pypdfium2>=4.30.1
+pyperclip>=1.9.0
+pytest>=8.3.5
+python-dateutil>=2.9.0.post0
+python-dotenv>=1.1.1
+python-magic>=0.4.27
+python-multipart>=0.0.20
+pytz>=2025.2
+PyYAML>=6.0.2
+referencing>=0.36.2
+regex>=2025.11.3
+requests>=2.32.5
+requests-toolbelt>=1.0.0
+requirements-parser>=0.13.0
+rfc3339-validator>=0.1.4
+rich>=14.1.0
+rich-rst>=1.3.1
+rpds-py>=0.27.0
+setuptools>=80.9.0
+simplekml>=1.3.6
+six>=1.17.0
+sniffio>=1.3.1
+soupsieve>=2.7
+SQLAlchemy>=2.0.40
+sse-starlette>=3.0.2
+starlette>=0.47.1
+tabulate>=0.9.0
+tenacity>=9.1.2
+tiktoken>=0.12.0
+tqdm>=4.67.1
+typing-inspect>=0.9.0
+typing-inspection>=0.4.1
+typing_extensions>=4.15.0
+tzdata>=2025.2
+urllib3>=2.4.0
+uvicorn>=0.35.0
+uvloop>=0.21.0
+watchfiles>=1.1.0
+websockets>=15.0.1
+Werkzeug>=3.1.1
+wheel>=0.45.1
+xxhash>=3.6.0
+yarl>=1.22.0
+zstandard>=0.25.0
