--- a/euro_aip/.gitignore
+++ b/euro_aip/.gitignore
@@ -4,3 +4,26 @@ t.*
 airports.db
 output.json
 secrets.json
+
+# Python build artifacts (should NOT be checked in)
+dist/
+build/
+*.egg-info/
+*.egg
+
+# Python cache
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+
+# Virtual environments
+venv/
+env/
+ENV/
