--- a/euro_aip/pyproject.toml
+++ b/euro_aip/pyproject.toml
@@ -14,7 +14,6 @@ license = {text = "MIT"}
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
@@ -53,7 +52,7 @@ pdf = [
 ]
 
 [tool.setuptools]
-packages = ["euro_aip"]
+packages = {find = {}}
 
 [tool.black]
 line-length = 88
