include package data

--- a/euro_aip/pyproject.toml
+++ b/euro_aip/pyproject.toml
@@ -53,6 +53,10 @@ pdf = [
 
 [tool.setuptools]
 packages = {find = {}}
+include-package-data = true
+
+[tool.setuptools.package-data]
+"euro_aip.utils" = ["aip_fields.csv"]
 
 [tool.black]
 line-length = 88
