--- a/euro_aip/pyproject.toml
+++ b/euro_aip/pyproject.toml
@@ -72,7 +72,11 @@ disallow_incomplete_defs = true
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = ["test_*.py"]
-addopts = "-v --tb=short"
+addopts = "-v --tb=short -s --log-cli-level=INFO"
+log_cli = true
+log_cli_level = "INFO"
+log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
+log_cli_date_format = "%Y-%m-%d %H:%M:%S"
 
 [tool.deptry.per_rule_ignores]
 DEP001 = ["security_config","api","chat"]
